manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8000
          - path: /otusapp/mayorov/?(.*)
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8000
